@@ -1,3 +1,8 @@
+Beta 0.9 Patch #1:
+
+Grammar Corrections
+Input Validation
+
 ====================================================================================
 Beta 0.9:
 
